SCRUM-4 :white_check_mark: Test: 테스트 경고 사항 해소